IGNITE-17851 Review note - wrap tuple [ClusterNode, long] into PrimaryReplica class.